@@ -124,6 +124,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6894: Fixed the issue urllib2 doesn't respect "no_proxy" environment 
+
 - Issue #6790: Make it possible again to pass an `array.array` to
   `httplib.HTTPConnection.send`. Patch by Kirk McDonald.
 
